--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-simple-toast": "^3.0.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
