--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-cardview": "^2.0.5",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-floating-action": "^1.22.0",
     "react-native-paper": "^5.9.1",
     "react-native-responsive-screen": "^1.4.2",
